crates/workspace/src/snapshots/workspace__discovery__test__discover_user_settings_unparseable.snap
---
source: crates/workspace/src/discovery.rs
expression: error
---
Failed to parse [AIR_TOML]:
TOML parse error at line 1, column 6
  |
1 | this is not valid toml
  |      ^
expected `.`, `=`
